// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Carousel 1`] = `
<div>
  <div
    class="cxd-Carousel cxd-Carousel--light show"
    style="width: 500px; height: 300px;"
  >
    <div
      class="cxd-Carousel-container"
    >
      <div
        class="cxd-Carousel-item fade out"
      >
        <div
          class="cxd-Image cxd-Image--original cxd-Carousel-image"
        >
          <div
            class="
            cxd-Image-origin cxd-Image-origin--contain undefined Img-container"
          >
            <div
              class="mask"
            >
              <span>
                标题
              </span>
            </div>
            <img
              class="cxd-Image-image"
              src="https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png"
            />
          </div>
          <div
            class="cxd-Image-info"
          >
            <div
              class="cxd-Image-title"
              title="标题"
            >
              标题
            </div>
            <div
              class="cxd-Image-caption"
              title="描述"
            >
              描述
            </div>
          </div>
        </div>
      </div>
      <div
        class="cxd-Carousel-item fade in"
      >
        <span
          class="cxd-Html"
        >
          <div
            style="width: 100%; height: 300px; background: #e3e3e3; text-align: center; line-height: 300px;"
          >
            carousel data
          </div>
        </span>
      </div>
    </div>
    <div
      class="cxd-Carousel-dotsControl"
    >
      <span
        class="cxd-Carousel-dot"
      />
      <span
        class="cxd-Carousel-dot is-active"
      />
      <span
        class="cxd-Carousel-dot"
      />
    </div>
    <div
      class="cxd-Carousel-leftArrow"
    >
      <icon-mock
        classname="icon icon-left-arrow"
        icon="left-arrow"
      />
    </div>
    <div
      class="cxd-Carousel-rightArrow"
    >
      <icon-mock
        classname="icon icon-right-arrow"
        icon="right-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:Carousel with controls & controlsTheme & thumbMode 1`] = `
<div>
  <div
    class="cxd-Carousel cxd-Carousel--dark"
  >
    <div
      class="cxd-Carousel-container"
    >
      <div
        class="cxd-Carousel-item fade in"
      >
        <div
          class="cxd-Image cxd-Image--original cxd-Carousel-image"
        >
          <div
            class="
            cxd-Image-origin cxd-Image-origin--cover undefined Img-container"
          >
            <div
              class="mask"
            >
              <span />
            </div>
            <img
              class="cxd-Image-image"
              src="https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Carousel with itemSchema & width & height 1`] = `
<div>
  <div
    class="cxd-Carousel cxd-Carousel--light"
    style="width: 101px; height: 99px;"
  >
    <div
      class="cxd-Carousel-container"
    >
      <div
        class="cxd-Carousel-item fade in"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            <div
              class="itemSchemaClassName"
              style="background-image: url('https://internal-amis-res.cdn.bcebos.com/images/2019-12/1577157239810/da6376bf988c.png');"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="cxd-Carousel-dotsControl"
    >
      <span
        class="cxd-Carousel-dot is-active"
      />
    </div>
    <div
      class="cxd-Carousel-leftArrow"
    >
      <icon-mock
        classname="icon icon-left-arrow"
        icon="left-arrow"
      />
    </div>
    <div
      class="cxd-Carousel-rightArrow"
    >
      <icon-mock
        classname="icon icon-right-arrow"
        icon="right-arrow"
      />
    </div>
  </div>
</div>
`;
